[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Images/UI/trade_map.png" type="Texture" id=1]
[ext_resource path="res://Scripts/misc/TradeMap.gd" type="Script" id=2]
[ext_resource path="res://Scenes/misc/TradeMapLocation.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 316, 258.5 )

[node name="TradeMap" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.50293, 0.50293 )
texture = ExtResource( 1 )
centered = false

[node name="TradeMapLocation" parent="." instance=ExtResource( 3 )]
position = Vector2( 276, 140 )

[node name="TradeMapLocation2" parent="." instance=ExtResource( 3 )]
position = Vector2( 231, 154 )

[node name="TradeMapLocation3" parent="." instance=ExtResource( 3 )]
position = Vector2( 237, 221 )

[node name="TradeMapLocation4" parent="." instance=ExtResource( 3 )]
position = Vector2( 85, 61 )

[node name="TradeMapLocation5" parent="." instance=ExtResource( 3 )]
position = Vector2( 233, 284 )

[node name="Panel" type="Panel" parent="."]
margin_right = 327.0
margin_bottom = 40.0

[node name="TradeText" type="RichTextLabel" parent="Panel"]
margin_right = 327.0
margin_bottom = 40.0
fit_content_height = true

[node name="Warning" type="RichTextLabel" parent="Panel"]
modulate = Color( 1, 0, 0, 1 )
margin_top = 17.0
margin_right = 326.0
margin_bottom = 40.0

[node name="Timer" type="Timer" parent="Panel/Warning"]

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 210, 44 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
position = Vector2( 106, 214 )
shape = SubResource( 1 )

[connection signal="mouse_entered" from="TradeMapLocation" to="." method="_on_TradeMapLocation_mouse_entered"]
[connection signal="mouse_exited" from="TradeMapLocation" to="." method="_on_TradeMapLocation_mouse_exited"]
[connection signal="mouse_entered" from="TradeMapLocation2" to="." method="_on_TradeMapLocation2_mouse_entered"]
[connection signal="mouse_exited" from="TradeMapLocation2" to="." method="_on_TradeMapLocation2_mouse_exited"]
[connection signal="mouse_entered" from="TradeMapLocation3" to="." method="_on_TradeMapLocation3_mouse_entered"]
[connection signal="mouse_exited" from="TradeMapLocation3" to="." method="_on_TradeMapLocation3_mouse_exited"]
[connection signal="mouse_entered" from="TradeMapLocation4" to="." method="_on_TradeMapLocation4_mouse_entered"]
[connection signal="mouse_exited" from="TradeMapLocation4" to="." method="_on_TradeMapLocation4_mouse_exited"]
[connection signal="mouse_entered" from="TradeMapLocation5" to="." method="_on_TradeMapLocation5_mouse_entered"]
[connection signal="mouse_exited" from="TradeMapLocation5" to="." method="_on_TradeMapLocation5_mouse_exited"]
[connection signal="timeout" from="Panel/Warning/Timer" to="." method="_on_Timer_timeout"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
